# IAS_Emulator

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md
src/: core.h  instr.c  instr.h  machine.c  machine.h  main.c  mem.c  mem.h  word.c  word.h
